tests/react_16_3/react_16_3.exp
Error ---------------------------------------------------------------------------------------------- forwardRef.js:12:13

Cannot create `FancyButton` element because property `foo` is missing in props [1] but exists in `Props` [2].
[prop-missing]

   forwardRef.js:12:13
   12| const _a = <FancyButton />; // Error, missing foo
                   ^^^^^^^^^^^

References:
   forwardRef.js:12:12
   12| const _a = <FancyButton />; // Error, missing foo
                  ^^^^^^^^^^^^^^^ [1]
   forwardRef.js:5:38
    5| const FancyButton = React.forwardRef<Props, _>((props, ref) => (
                                            ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- forwardRef.js:14:13

Cannot create `FancyButton` element because property `bar` is missing in `Props` [1] but exists in props [2].
[prop-missing]

   forwardRef.js:14:13
   14| const _c = <FancyButton foo={3} bar={3} />; // Error bar, not allowed in exact props
                   ^^^^^^^^^^^

References:
   forwardRef.js:5:38
    5| const FancyButton = React.forwardRef<Props, _>((props, ref) => (
                                            ^^^^^ [1]
   forwardRef.js:14:12
   14| const _c = <FancyButton foo={3} bar={3} />; // Error bar, not allowed in exact props
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- forwardRef.js:20:38

Cannot create `FancyButton` element because in property `ref`: [incompatible-type]
 - Either `HTMLDivElement` [1] is incompatible with `HTMLButtonElement` [2] in property `current`.
 - Or a call signature declaring the expected parameter / return type is missing in object type [3] but exists in
   function type [4].

   forwardRef.js:20:38
    20| const _e = <FancyButton foo={3} ref={badRef} />; // Incorrect ref type
                                             ^^^^^^

References:
   forwardRef.js:19:32
    19| const badRef = React.createRef<HTMLDivElement>();
                                       ^^^^^^^^^^^^^^ [1]
   <BUILTINS>/react-dom.js:207:15
   207|     instance: HTMLButtonElement,
                      ^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/react.js:264:6
   264|   ): {|current: null | T|};
             ^^^^^^^^^^^^^^^^^^^^^ [3]
   <BUILTINS>/react.js:213:6
   213|   | ((React$ElementRef<ElementType> | null) => mixed)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [4]


Error ---------------------------------------------------------------------------------------------- forwardRef.js:23:39

Cannot create `FancyButton` element because in property `ref`: [incompatible-type]
 - Either property `current` is missing in function [1] but exists in object type [2].
 - Or `HTMLDivElement` [3] is incompatible with `HTMLButtonElement` [4] in the first argument.

   forwardRef.js:23:39
    23| const _g =  <FancyButton foo={3} ref={(x: null | HTMLDivElement) => x} />; // Incorrect ref type
                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   <BUILTINS>/react.js:212:5
   212|   | { -current: React$ElementRef<ElementType> | null, ... }
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]
   forwardRef.js:23:50
    23| const _g =  <FancyButton foo={3} ref={(x: null | HTMLDivElement) => x} />; // Incorrect ref type
                                                         ^^^^^^^^^^^^^^ [3]
   <BUILTINS>/react-dom.js:207:15
   207|     instance: HTMLButtonElement,
                      ^^^^^^^^^^^^^^^^^ [4]


Error ---------------------------------------------------------------------------------------------- forwardRef.js:42:35

Cannot create `UnionRef` element because in property `ref`: [incompatible-type]
 - Either `HTMLAnchorElement` [1] is incompatible with `HTMLButtonElement` [2] in property `current`.
 - Or `HTMLAnchorElement` [1] is incompatible with `HTMLDivElement` [3] in property `current`.
 - Or a call signature declaring the expected parameter / return type is missing in object type [4] but exists in
   function type [5].

   forwardRef.js:42:35
    42| const _j = <UnionRef foo={3} ref={badUnionRef} />; // Error bad ref
                                          ^^^^^^^^^^^

References:
   forwardRef.js:27:65
    27| const UnionRef = React.forwardRef<FooProps, HTMLButtonElement | HTMLAnchorElement>(
                                                                        ^^^^^^^^^^^^^^^^^ [1]
   forwardRef.js:41:37
    41| const badUnionRef = React.createRef<HTMLButtonElement | HTMLDivElement>();
                                            ^^^^^^^^^^^^^^^^^ [2]
   forwardRef.js:41:57
    41| const badUnionRef = React.createRef<HTMLButtonElement | HTMLDivElement>();
                                                                ^^^^^^^^^^^^^^ [3]
   <BUILTINS>/react.js:264:6
   264|   ): {|current: null | T|};
             ^^^^^^^^^^^^^^^^^^^^^ [4]
   <BUILTINS>/react.js:213:6
   213|   | ((React$ElementRef<ElementType> | null) => mixed)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [5]



Found 5 errors

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
